--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h1 data-testid="gameInstructions">Guess the correct color!</h1>
     <div id="colorBox" data-testid="colorBox"></div>
     <div
+      data-testid="colorOptions"
       class="colorOptions"
       id="colorOptions"
       role="group"
