--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <h1 data-testid="gameInstructions">Guess the correct color!</h1>
     <div id="colorBox" data-testid="colorBox"></div>
     <div
-      data-testid="colorOptions"
-      class="colorOptions"
-      id="colorOptions"
+      data-testid="colorOption"
+      class="colorOption"
+      id="colorOption"
       role="group"
-      aria-label="Color options"></div>
+      aria-label="Color option"></div>
     <p id="gameStatus" data-testid="gameStatus" aria-live="polite"></p>
     <p>Score: <span id="score" data-testid="score">0</span></p>
     <p>High Score: <span id="highScore" data-testid="highScore">0</span></p>
